# Real-Time-Translation

./: LICENSE.txt  README.md  debug_translator.py  main.py  standalone_translator.py  structure.txt  tree.txt
gui/: CMakeLists.txt
gui/src/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
output/: translations_20251113_115607.txt  translations_20251113_123152.txt
requirements/: requirements.txt
src/: audio_capture.py  config.py  fixed_translator.py  gui_translator.py  speech_to_text.py  translator.py
utils/: test_audio.py  view_translations.py
